<resources>
    <string name="app_name">C Connect 2.0</string>
    <string name="title_activity_main">Add Card Details</string>
    <string name="action_settings">Settings</string>
    <string name="delete_cards">Delete</string>
    <string name="help">Help</string>
    <string name="label_text_hint">Label (Eg. My Dad\'s Card)</string>
    <string name="cvv_text_hint">CVV/CVC</string>
    <string name="card_text_hint">Name on Card</string>
    <string name="card_no_text">Credit/Debit Card Number</string>
    <string name="button_text">Save Card</string>
    <string name="validity_optional_text">* Optional for Maestro</string>
    <string name="cvv_optional_text">* Optional for Maestro</string>
    <string name="label_optional_text">* Optional</string>
</resources>
